--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-recaptcha": "^2.3.10",
@@ -24,6 +25,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://192.168.0.75",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.23.0",
     "react-router-dom": "^5.3.0"
   }
 }
